samples/_failures_safe/1761320881_eec15b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_316af0e5.c: In function ‘main’:
./samples/SAFE/__tmp_316af0e5.c:149:5: error: ‘print_stat’ undeclared (first use in this function)
  149 |     print_stat
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_316af0e5.c:149:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_316af0e5.c:149:15: error: expected ‘;’ at end of input
  149 |     print_stat
      |               ^
      |               ;
./samples/SAFE/__tmp_316af0e5.c:149:5: error: expected declaration or statement at end of input
  149 |     print_stat
      |     ^~~~~~~~~~
